# oci-genai-service

./: .gitignore  README.md  docker-compose.yml  install.sh  pyproject.toml
control-plane/genai-control-plane-python-sample/: README.md  create_dedicated_ai_cluster_example.py  create_endpoint_example.py  create_model_example.py  delete_dedicated_ai_cluster_example.py  delete_endpoint_example.py  delete_model_example.py  get_dedicated_ai_cluster_example.py  get_endpoint_example.py  get_model_example.py  list_dedicated_ai_clusters_example.py  list_endpoints_example.py  list_endpoints_example_with_session_token.py  list_models_example.py  list_work_request_errors_example.py  list_work_request_logs_example.py  list_work_requests_example.py  requirements-local.txt  update_dedicated_ai_cluster_example.py  update_endpoint_example.py  update_model_example.py
data-plane/: README.md  embed_text.py  embed_text_demo.py  generate_text.py  generate_text_demo.py  requirements.txt  summarize_text.py  summarize_text_demo.py
examples/: README.md
examples/01_chat_basics/: simple_chat.py
examples/02_streaming/: stream_chat.py
examples/03_vision/: describe_image.py
examples/04_function_calling/: single_tool.py
examples/05_embeddings/: embed_texts.py
examples/06_rag_oracle_vectordb/: rag_chatbot.py
examples/07_agents/: simple_agent.py
scripts/: init_vectordb.sql
tests/: conftest.py  test_agents.py  test_auth.py  test_cli.py  test_client.py  test_embeddings.py  test_guardrails.py  test_models.py  test_rag.py  test_thinking.py  test_tools.py  test_vectordb.py  test_vision.py
(+29 files in other folders)
